#1148 : how to documents for angular and ionic code genration (#1157)
* #1148 : how to documents for angular and ionic code genration

* #1148 : how to documents for angular and ionic code genration

* #1148 updated the code generation documents

* Update master-cobigen.asciidoc

* #1148 added new links

* Update master-cobigen.asciidoc

* Update master-cobigen.asciidoc

* Update master-cobigen.asciidoc

* #1148 added additional formatting

* #1148 added additional formatting

Co-authored-by: Malte Brunnlieb <maybeec@users.noreply.github.com>

--- a/documentation/master-cobigen.asciidoc
+++ b/documentation/master-cobigen.asciidoc
@@ -98,8 +98,12 @@ include::howto_update_CobiGen[leveloffset=2]
 
 include::howto_Release-creation[leveloffset=2]
 
+include::howto-devonfw-CobiGen-OpenAPI.adoc[leveloffset=2]
+
+include::howto-devonfw-ide-CobiGen-PoC-E2E.adoc[leveloffset=2]
+
 include::howto_enable_composite_primary_keys_in_entity[leveloffset=2]
 
 == Template Development
 
-include::cobigen-templates_helpful-links[leveloffset=2]
+include::cobigen-templates_helpful-links.adoc[leveloffset=2]
